package entitee;

import interactionUtilisateur.Affichage;
import interactionUtilisateur.Scanner;
import equipement.Equipement;
import equipement.arme.Arme;
import equipement.armure.Armure;
import des.Des;

import java.util.ArrayList;

public abstract class Entitee {
    protected int[] m_stats = new int[5];
    protected Equipement[] m_equipement = new Equipement[2];
    protected int m_pvActuelle;
    public Entitee()
    {
        for (int i = 0; i<5; i++)
        {
            m_stats[i] = 10;
        }
        m_pvActuelle =m_stats[0] ;
    }
    public Entitee (int[] s)
    {
        m_stats = s;
        m_pvActuelle = m_stats[0];
    }
    public Entitee(int[] s, Equipement[] e)
    {
        m_stats = s;
        m_equipement = e;
        m_pvActuelle = m_stats[0];
    }
    public boolean seFaireAttaquer(int jetAttaque)
    {
        Armure a = (Armure) m_equipement[0];
        if(jetAttaque >= a.getCA())
        {
            return true;
        }
        else
        {
            return false;
        }
    }
    public void sePrendreDegats(int degats)
    {
        m_pvActuelle -= degats;
    }
    public boolean seDeplacer(int distance)
    {
        if(distance > m_stats[3])
        {
            return false;
        }
        else
        {
            return true;
        }
    }
    public void attaquer(Entitee ennemie)
    {
        Arme a = (Arme) m_equipement[1];
        int jetAttaque = Des.lancerDes(20) + this.m_stats[a.quelleStat()];
        if(ennemie.seFaireAttaquer(jetAttaque))
        {
            ennemie.sePrendreDegats(a.infligerDegats());
        }
    }
    public Entitee choisirCible(ArrayList<Entitee> list)
    {
        boolean f = false;
        int choix;
        while (f) {
            Affichage.afficheListeEntitee(list);
            choix = Scanner.demandeInt() - 1;
            if(choix > list.size())
            {
                Affichage.affiche("Index invalide, veillez sélectionnez un index valide");
            }
            else if(choix < 0)
            {
                return null;
            }
            else
            {
                return list.get(choix);
            }
        }
        return null;
    }
    public int getPorteeArme()
    {
        Arme a = (Arme) m_equipement[1];
        return a.getPortee();
    }
    public boolean estVivant()
    {
        return m_pvActuelle <= 0;
    }
    public int lancerInitiative()
    {
        return Des.lancerDes(20) + m_stats[4];
    }
    public int getForce()
    {
        return m_stats[1];
    }
    public int getDexterite()
    {
        return m_stats[2];
    }
    public int getVitesse()
    {
        return m_stats[3];
    }
    public int getPv()
    {
        return m_stats[0];
    }
    public int getPvActuelle()
    {
        return m_pvActuelle;
    }
    public String getNomArmure()
    {
        return m_equipement[0].getNom();
    }
    public Arme getArme()
    {
        return (Arme)m_equipement[1];
    }
    public abstract String getNom();
    public abstract String getDescription();

}
